--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,7 +1,8 @@
 @charset "UTF-8";
+
 body {
   font-family: Arial, sans-serif;
-  background: #D7F3FD;
+  background:#D7F3FD;
 }
 
 .container {
@@ -19,14 +20,16 @@ textarea, button, input {
 nav {
   text-align: center;
   margin-bottom: 20px;
-}
-nav a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: #007BFF;
+
+  a {
+    margin: 0 15px;
+    text-decoration: none;
+    color: #007BFF;
+  }
 }
 
 /* プログレスバーのスタイル */
+
 .progress-bar-container {
   width: 100%;
   background-color: #f3f3f3;
