--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,6 +109,14 @@ nav a {
 }
 
 /* プログレスバーのスタイル */
+.page-progress #imageArea {
+  text-align: right;
+}
+
+#progress {
+  margin-bottom: 50px;
+}
+
 .progress-bar-container {
   width: 100%;
   background-color: #f3f3f3;
@@ -124,6 +132,7 @@ nav a {
   text-align: center;
   line-height: 20px;
   color: white;
+  transform: scale(1.3);
 }
 
 #imageArea {
