--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,14 +9,21 @@ body {
   padding: 0;
   margin: 0;
 }
+
 .container {
-  max-width: 600px;
+  max-width: 780px;
   margin: 0 auto;
   text-align: center;
+  padding: 40px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
-@media screen and (min-width: 414px) {
+@media screen and (min-width: 340px) and (max-width: 760px) {
   .container {
-    padding: 130px 20px;
+    max-width: 100%;
+    padding: 20px;
   }
 }
 
@@ -27,7 +34,94 @@ input {
   margin: 0 0 20px;
 }
 
-/* menuボタンの設定 */
+h1 {
+  margin: 0 auto 60px;
+  width: 350px;
+}
+h1 img {
+  width: 100%;
+}
+@media screen and (min-width: 340px) and (max-width: 760px) {
+  h1 {
+    max-width: 64vw;
+    margin: 0 auto 30px;
+  }
+}
+
+.slide_wrap {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background: #fff;
+  z-index: 2;
+  position: absolute;
+  padding: 40px 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.slide_wrap .read {
+  margin-bottom: 30px;
+}
+.slide_wrap h1 {
+  margin-bottom: 60px;
+}
+
+.slick01 {
+  position: relative;
+  width: 640px;
+  margin: 0 auto 30px;
+}
+@media screen and (min-width: 340px) and (max-width: 760px) {
+  .slick01 {
+    max-width: 64vw;
+  }
+}
+.slick01 .slick-prev:before, .slick01 .slick-next:before {
+  font-size: 56px;
+  color: #81A4C7;
+}
+.slick01 .slick-prev {
+  width: 70px;
+  height: 70px;
+  left: 0;
+  cursor: pointer;
+  z-index: 1000;
+}
+.slick01 .slick-next {
+  width: 70px;
+  height: 70px;
+  right: 0;
+  cursor: pointer;
+  z-index: 1000;
+}
+.slick01 .slick-dots {
+  bottom: inherit;
+}
+.slick01 .slick-dots li {
+  width: 10px;
+  height: 10px;
+  background: rgba(129, 164, 199, 0.4);
+  border-radius: 50%;
+}
+.slick01 .slick-dots .slick-active {
+  background: #81A4C7;
+  border-radius: 50%;
+}
+.slick01 img {
+  max-width: 450px;
+  width: auto;
+  margin: 0 auto;
+}
+@media screen and (min-width: 340px) and (max-width: 760px) {
+  .slick01 img {
+    max-width: 64vw;
+  }
+}
+.slick01 .slick-dotted.slick-slider {
+  margin-bottom: 43px;
+}
+
 #menu-btn {
   background: #81A4C7;
   color: #fff;
@@ -39,14 +133,17 @@ input {
   position: absolute;
   top: 15px;
   right: 15px;
+  z-index: 10000;
 }
 
 #nav {
-  background: rgba(129, 164, 199, 0.83);
+  background: rgba(129, 164, 199, 0.95);
   width: 100%;
   height: 100%;
   position: relative;
+  top: 0;
   padding: 160px 0;
+  z-index: 3;
 }
 #nav li {
   margin-bottom: 20px;
@@ -69,33 +166,22 @@ input {
 .close::before,
 .close::after {
   content: "";
-  /* 疑似要素に必須 */
   width: 100%;
-  /* 幅いっぱいを指定 */
   height: 4px;
-  /* 適度な太さを指定 */
   display: inline-block;
-  /* 高さを持たせるためにinline-blockを指定 */
   background: #fff;
-  /* 線の色を指定 */
   border-radius: 2px;
-  /* 線の端を丸くしたいなら指定する */
   position: absolute;
-  /* 相対位置に指定 */
   top: 0;
-  /* 表示位置を上から0pxに指定 */
   left: 0;
-  /* 表示位置を左から0pxに指定 */
 }
 
 .close::before {
   transform: rotate(45deg);
-  /* 時計回りに45度回転させる */
 }
 
 .close::after {
   transform: rotate(-45deg);
-  /* 反時計回りに45度回転させる */
 }
 
 nav {
@@ -151,9 +237,8 @@ nav a {
 
 .history-entry {
   margin: 10px 0;
-  padding: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  padding: 20px;
+  border-bottom: 1px solid #000;
   display: flex;
   position: relative;
 }
@@ -181,14 +266,50 @@ nav a {
 .history-entry .history-delete-button {
   margin: 0 10px 0 0;
   position: absolute;
-  right: 0;
+  right: 10px;
+  bottom: 19px;
 }
 
 .btn {
   background: #81A4C7;
   border: none;
   border-radius: 10px;
-  height: 40px;
-  line-height: 40px;
+  height: 46px;
+  line-height: 46px;
   color: #fff;
+  padding: 0 30px;
+  display: inline-block;
+  font-size: 17px;
+}
+
+.page-index {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 0;
+}
+
+#close_howto {
+  text-align: center;
+}
+#close_howto span {
+  cursor: pointer;
+  background: #81A4C7;
+  border: none;
+  border-radius: 10px;
+  height: 46px;
+  line-height: 46px;
+  color: #fff;
+  padding: 0 30px;
+  display: inline-block;
+  font-size: 17px;
+}
+
+#diagnosisResponse,
+.diagnosisResponse {
+  width: 500px;
+  line-height: 1.5;
+  text-align: left;
+  margin: 0 auto;
 }/*# sourceMappingURL=style.css.map */
