見た目の調整

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  line-height: 1.5;
 }
 
 .container {
@@ -195,6 +196,9 @@ nav a {
 }
 
 /* プログレスバーのスタイル */
+.page-progress {
+  padding: 100px;
+}
 .page-progress #imageArea {
   text-align: right;
 }
@@ -204,10 +208,10 @@ nav a {
 }
 
 .progress-bar-container {
-  width: 100%;
+  max-width: 780px;
   background-color: #f3f3f3;
   border-radius: 25px;
-  margin: 10px 0;
+  margin: 10px auto;
 }
 
 .progress-bar {
@@ -306,10 +310,23 @@ nav a {
   font-size: 17px;
 }
 
+.page-result textarea {
+  padding: 0;
+}
+
 #diagnosisResponse,
 .diagnosisResponse {
   width: 500px;
-  line-height: 1.5;
   text-align: left;
   margin: 0 auto;
+}
+@media screen and (min-width: 340px) and (max-width: 760px) {
+  #diagnosisResponse,
+  .diagnosisResponse {
+    width: 100%;
+  }
+}
+
+.errorImage {
+  margin-bottom: 30px;
 }/*# sourceMappingURL=style.css.map */
